--- a/css/style.css
+++ b/css/style.css
@@ -165,3 +165,11 @@ footer .column i + i {
   min-height: 38px;
   border-radius: 2px;
 }
+
+.selection-1 {
+  margin-top: 75px;
+  margin-left: 200px;
+  margin-right: 200px;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+}
